# pointcloud_evaluation_tool

./: README.md
MeanMapEntropy/clouds/: test_pcd.pcd
MeanMapEntropy/src/: mean_map_entropy.cpp
mean_map_entropy/: CMakeLists.txt  README
